--- a/设计文档.md
+++ b/设计文档.md
@@ -10,3 +10,7 @@
 
 - 针对c语言的注释符号`/`，每当按下斜杠按键时刷新计时器
 - 计时器满后警告
+
+## 鸣谢
+
+- [VSCode插件开发全攻略](https://www.cnblogs.com/liuxianan/p/vscode-plugin-overview.html)
