--- a/设计文档.md
+++ b/设计文档.md
@@ -4,12 +4,11 @@
 
 - 实现一个轻量级的插件
 - 基于vscode
-- 当用户开启插件后写代码且长时间没有写注释，给予警告
-
-## 实现方法
-
-- 针对c语言的注释符号`/`，每当按下斜杠按键时刷新计时器
-- 计时器满后警告
+- 注释辅助
+- 番茄钟
+- 打字机
+- 专注
+- 悬浮注释
 
 ## 鸣谢
 
